# gbg-farligt-avfall

./: README.md  apier.yaml  catalog-info.yaml
.github/workflows/: build-backend.yml  build-frontend.yml  build-infrastructure.yml  build.yml  deploy.yml
gfa-backend/: Cargo.toml
gfa-backend/gfa-common/: Cargo.toml
gfa-backend/gfa-common/src/: lib.rs  pickup_event.rs  pickup_stop.rs
gfa-backend/gfa-events/: Cargo.toml
gfa-backend/gfa-preprocess-stops/: Cargo.toml
gfa-backend/gfa-preprocess-stops/src/: main.rs  stop_parser.rs
gfa-backend/gfa-save-events/: Cargo.toml
gfa-backend/gfa-save-events/src/: main.rs
gfa-backend/gfa-scraper/: Cargo.toml
gfa-backend/gfa-scraper/src/: main.rs  page_fetcher.rs  page_parser.rs
gfa-backend/gfa-scraper/src/resources/test/: body_with_items.html
gfa-backend/src/add-subscription/: add_subscription_request.rs  main.rs  parser.rs  verification_email.html  verification_email.rs
gfa-backend/src/common/: coordinate.rs  dynamodb_util.rs  events_repo.rs  lib.rs  pickup_event.rs  pickup_stop.rs  send_email.rs  stops_repo.rs  subscription.rs  subscriptions_repo.rs
gfa-backend/src/get-stops/: main.rs
gfa-backend/src/notify/: email_formatter.rs  main.rs  notify_email.html  publish_events.rs
gfa-backend/src/preprocess-stops/: gen_address.rs  geocoder.rs  main.rs  mapquest_geocoder.rs  stop_parser.rs
gfa-backend/src/preprocess-stops/resources/test/: response.json
gfa-backend/src/remove-subscription/: main.rs
gfa-backend/src/save-events/: events_filter.rs  events_repo.rs  main.rs
gfa-backend/src/save-stops/: main.rs  stop_parser.rs
gfa-backend/src/scraper/: main.rs  page_fetcher.rs  page_parser.rs
gfa-backend/src/scraper/resources/test/: body_without_items.html
gfa-backend/src/subscribe/: main.rs  subscribe.rs  subscription.rs  validate_request.rs
gfa-backend/src/verify-subscription/: main.rs
gfa-frontend/: .eslintignore  .eslintrc.js  .prettierrc  README.md  package-lock.json  package.json  preact.config.js  size-plugin.json
gfa-frontend/src/: index.d.ts  manifest.json  template.html
gfa-frontend/src/api/: apiClient.ts
gfa-frontend/src/components/: app.tsx
gfa-frontend/src/components/modal/: index.tsx  style.css  style.css.d.ts
gfa-frontend/src/components/stop/: index.tsx
gfa-frontend/src/components/stop-list-item/: index.tsx  style.css  style.css.d.ts
gfa-frontend/src/components/subscribe-modal/: index.tsx  style.css  style.css.d.ts
gfa-frontend/src/components/text-input-with-button/: index.tsx  style.css  style.css.d.ts
gfa-frontend/src/routes/details/: index.tsx  style.css  style.css.d.ts
gfa-frontend/src/routes/home/: index.js  index.tsx
gfa-frontend/src/routes/list/: index.tsx  style.css  style.css.d.ts
gfa-frontend/src/routes/stop/: index.tsx  style.css  style.css.d.ts
gfa-frontend/src/routes/unsubscribe/: index.tsx  style.css
gfa-frontend/src/routes/verify/: index.tsx  style.css  style.css.d.ts
gfa-frontend/src/style/: index.css
gfa-frontend/src/types/: Stop.ts
gfa-iac/: .gitignore  cdk.json  package-lock.json  package.json
gfa-iac/lib/: api-stack.ts  events-ingestion-stack.ts  function-creator.ts  gfa-api-stack.ts  gfa-iac-stack.ts  gfa-ingestion-stack.ts  gfa-notify-stack.ts  gfa-pipeline-stack.ts  gfa-stack.ts  gfa-stops-stack.ts  gfa-subscriptions-stack.ts  gfa-web-stack.ts  ingestion-stack.ts  main-stack.ts  notify-stack.ts  stops-stack.ts  subscriptions-stack.ts  web-cert-stack.ts  web-stack.ts
gfa-iac/lib/function/: gfa-function-invoke.ts  gfa-function.ts
gfa-iac/lib/sendgrid/: domain-verifier-lambda.js  domain-verifier.ts
gfa-poller/: Cargo.toml
gfa-poller/src/: events_repo.rs  main.rs  models.rs  page_fetcher.rs  page_parser.rs  pickup_event.rs  url_parser.rs
gfa-poller/src/resources/test/: body_with_very_bad_content.html
