[package]
name = "gfa-backend"
version = "0.1.0"
authors = ["Rickard Andersson <dunklas@gmail.com>"]
edition = "2018"

[[bin]]
name = "scraper"
path = "src/scraper/main.rs"

[[bin]]
name = "save-events"
path = "src/save-events/main.rs"

[[bin]]
name = "save-stops"
path = "src/save-stops/main.rs"

[[bin]]
name = "get-stops"
path = "src/get-stops/main.rs"

[[bin]]
name = "notify"
path = "src/notify/main.rs"

[[bin]]
name = "add-subscription"
path = "src/add-subscription/main.rs"

[[bin]]
name = "verify-subscription"
path = "src/verify-subscription/main.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "master" }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
simple_logger = "1.11.0"
reqwest = { version = "0.10.10", default_features = false, features = ["rustls-tls", "blocking", "json"] }
select = "0.5.0"
regex = "1.5.4"
chrono = "0.4.19"
chrono-tz = "0.5.3"
futures = "0.3.14"
tokio = { version = "0.2.25", features = ["full"] }
lazy_static = "1.4.0"
rusoto_core = {version = "0.45.0", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "0.45.0", default_features = false, features=["rustls"]}
rusoto_dynamodb = {version = "0.45.0", default_features = false, features=["rustls"]}
rusoto_sns = { version = "0.45.0", default_features = false, features=["rustls"]}
aws_lambda_events = "0.3.1"
rand = "0.8.3"
sha2 = "0.9.4"

[dev-dependencies]
assert_approx_eq = "1.1.0"
