[package]
name = "gfa-poller"
version = "0.1.0"
authors = ["Rickard Andersson <dunklas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
simple_logger = "1.6.0"
ureq = "1.4.1"
reqwest = { version = "0.10", features = ["rustls-tls"] }
select = "0.5.0"
regex = "1.3.9"
chrono = "0.4"
chrono-tz = "0.4"

[dev-dependencies]
